[gd_scene load_steps=12 format=3 uid="uid://bakruh0qvq10c"]

[ext_resource type="Script" path="res://ui.gd" id="1_xsy64"]
[ext_resource type="Theme" uid="uid://3smw3tnxke7n" path="res://healthbar.tres" id="2_dttrt"]
[ext_resource type="Texture2D" uid="uid://ddavcxrop87me" path="res://assets/turn_indicator.png" id="2_mpdl6"]
[ext_resource type="Texture2D" uid="uid://drmhb4e64empf" path="res://assets/attack_button.png" id="2_pm3b5"]
[ext_resource type="Texture2D" uid="uid://bps22f8h2af31" path="res://assets/special_button.png" id="3_5ooqy"]
[ext_resource type="Texture2D" uid="uid://c88t6h65amc8y" path="res://assets/rage_indicator.png" id="3_khd12"]
[ext_resource type="Texture2D" uid="uid://c7l2rsnyf7an8" path="res://assets/tile_0086.png" id="7_lrbt0"]
[ext_resource type="Texture2D" uid="uid://dk7dp40l1b7eh" path="res://assets/tile_0121.png" id="8_j4l27"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1dcux"]
bg_color = Color(0.137813, 0.318433, 0.626066, 1)

[sub_resource type="Theme" id="Theme_bhrqt"]
ProgressBar/styles/background = null
ProgressBar/styles/fill = SubResource("StyleBoxFlat_1dcux")

[sub_resource type="Theme" id="Theme_p7ig7"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_xsy64")

[node name="Player" type="HBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 46.0
offset_top = 45.0
offset_right = 350.0
offset_bottom = 181.0
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Bars" type="VBoxContainer" parent="Player"]
layout_mode = 2
metadata/_edit_group_ = true

[node name="HealthBar" type="ProgressBar" parent="Player/Bars"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
theme = ExtResource("2_dttrt")

[node name="RageBar" type="ProgressBar" parent="Player/Bars"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
theme = SubResource("Theme_bhrqt")

[node name="Actions" type="VBoxContainer" parent="Player"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
metadata/_edit_group_ = true

[node name="Attack" type="TextureButton" parent="Player/Actions"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
texture_normal = ExtResource("2_pm3b5")
ignore_texture_size = true
stretch_mode = 6

[node name="Special" type="TextureButton" parent="Player/Actions"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
texture_normal = ExtResource("3_5ooqy")
ignore_texture_size = true
stretch_mode = 6

[node name="DebugJump" type="Button" parent="Player/Actions"]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Jump"

[node name="DebugDodge" type="Button" parent="Player/Actions"]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Dodge"

[node name="Indicators" type="VBoxContainer" parent="Player"]
layout_mode = 2

[node name="TurnIndicator" type="TextureRect" parent="Player/Indicators"]
visible = false
layout_mode = 2
texture = ExtResource("2_mpdl6")

[node name="RageIndicator" type="TextureRect" parent="Player/Indicators"]
visible = false
layout_mode = 2
texture = ExtResource("3_khd12")

[node name="Enemy" type="HBoxContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -329.0
offset_top = 36.0
offset_right = -25.0
offset_bottom = 102.0
grow_horizontal = 0
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Indicators" type="VBoxContainer" parent="Enemy"]
layout_mode = 2

[node name="TurnIndicator" type="TextureRect" parent="Enemy/Indicators"]
visible = false
layout_mode = 2
texture = ExtResource("2_mpdl6")

[node name="RageIndicator" type="TextureRect" parent="Enemy/Indicators"]
visible = false
layout_mode = 2
texture = ExtResource("3_khd12")

[node name="DebugActions" type="VBoxContainer" parent="Enemy"]
visible = false
layout_mode = 2
metadata/_edit_group_ = true

[node name="Attack" type="Button" parent="Enemy/DebugActions"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
text = "Attack"

[node name="Special" type="Button" parent="Enemy/DebugActions"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
text = "Special"

[node name="Bars" type="VBoxContainer" parent="Enemy"]
layout_mode = 2
metadata/_edit_group_ = true

[node name="HealthBar" type="ProgressBar" parent="Enemy/Bars"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
theme = ExtResource("2_dttrt")
fill_mode = 1
show_percentage = false

[node name="RageBar" type="ProgressBar" parent="Enemy/Bars"]
visible = false
custom_minimum_size = Vector2(150, 30)
layout_mode = 2

[node name="Hint" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.5
offset_top = -324.0
offset_right = 576.5
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="w_key" type="TextureRect" parent="Hint"]
custom_minimum_size = Vector2(25, 25)
offset_left = 132.5
offset_top = 121.0
offset_right = 182.5
offset_bottom = 146.0
texture = ExtResource("7_lrbt0")
expand_mode = 1
stretch_mode = 5

[node name="s_key" type="TextureRect" parent="Hint"]
custom_minimum_size = Vector2(25, 25)
offset_left = 131.5
offset_top = 150.0
offset_right = 181.5
offset_bottom = 175.0
texture = ExtResource("8_j4l27")
expand_mode = 1
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="Hint"]
custom_minimum_size = Vector2(50, 50)
offset_left = 186.5
offset_top = 121.0
offset_right = 286.5
offset_bottom = 171.0
theme = SubResource("Theme_p7ig7")
text = "to jump"

[node name="RichTextLabel2" type="RichTextLabel" parent="Hint"]
custom_minimum_size = Vector2(50, 50)
offset_left = 187.5
offset_top = 150.0
offset_right = 287.5
offset_bottom = 200.0
text = "to slide"

[connection signal="pressed" from="Player/Actions/Attack" to="." method="_on_player_attack_pressed"]
[connection signal="pressed" from="Player/Actions/Special" to="." method="_on_player_special_pressed"]
[connection signal="pressed" from="Player/Actions/DebugJump" to="." method="_on_player_debug_jump_pressed"]
[connection signal="pressed" from="Player/Actions/DebugDodge" to="." method="_on_player_debug_dodge_pressed"]
[connection signal="pressed" from="Enemy/DebugActions/Attack" to="." method="_on_enemy_attack_pressed"]
[connection signal="pressed" from="Enemy/DebugActions/Special" to="." method="_on_enemy_special_pressed"]
